Add file Commands.sty to libneo.
Will be removed from neo-2 soon.

Also adds some code commands (gorilla, simple).

--- a/doc/UserDoc/main.tex
+++ b/doc/UserDoc/main.tex
@@ -47,7 +47,7 @@
 \usepackage{amssymb}
 \usepackage{bm}
 
-\usepackage{../../../neo-2/DOC/UserDoc/Commands}
+\usepackage{../shared/Commands}
 
 \title{\textbf{libneo Users Documentation}}
 
