LaTeX command for libneo.
Commands.sty is now in libneo, thus should have a command for libneo.

--- a/doc/shared/Commands.sty
+++ b/doc/shared/Commands.sty
@@ -6,6 +6,7 @@
 \newcommand{\neotwoql}[0]{NEO-2-QL}
 \newcommand{\neort}[0]{NEO-RT}
 \newcommand{\simple}[0]{SIMPLE}
+\newcommand{\libneo}[0]{libneo}
 
 %% code references
 \newcommand{\file}[1]{{\em #1}} % For files.
