Proper title for document.
Document is no longer part of neo-2, so it should be renamed.

--- a/doc/ExtraDocuments/coding_style.tex
+++ b/doc/ExtraDocuments/coding_style.tex
@@ -48,7 +48,7 @@
 
 \usepackage{../shared/Commands}
 
-\title{\textbf{NEO-2 Coding Style\\November 2018}}
+\title{\textbf{AG Plasma Coding Style\\August 2020}}
 
 \begin{document}
 
