Add new section Tests.
So far only obvious things.

--- a/doc/ExtraDocuments/coding_style.tex
+++ b/doc/ExtraDocuments/coding_style.tex
@@ -261,6 +261,17 @@ For main: version number?
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Tests}
+Code should be tested.
+
+This includes benchmarks against other codes, but also test of parts
+(e.g. subroutines/functions) of the code.
+
+The latter is intended to verify that the code still runs correctly,
+after it is written and after changes (e.g. refactoring) have been made.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{(Python or Shell) Scripts}
 Scripts that are either requied by neo2 itself, the make-system or the
 test system should be put in the corresponding folder of neo2 and added
