Add LaTeX shortcuts.

--- a/doc/shared/Commands.sty
+++ b/doc/shared/Commands.sty
@@ -24,7 +24,63 @@
 \newcommand{\fa}[1]{\left\langle #1\right\rangle} % Flux surface average
 
 \newcommand{\pd}[2]{\frac{\partial #1}{\partial #2}} % for partial derivatives
-\newcommand{\pdd}[2]{\frac{\partial^2 #1}{\partial #2^2}} % for double partial derivatives
+\newcommand{\pdd}[2]{\frac{\partial^2 #1}{\partial #2^2}} % for second partial derivatives
+\newcommand{\od}[2]{\frac{\rd #1}{\rd #2}} % for second ordinary derivatives
+\newcommand{\pdone}[1]{\frac{\partial}{\partial #1}} % for partial derivatives without derived quantity (i.e. only symbol d/dx)
+\newcommand{\odone}[1]{\frac{\rd}{\rd #2}} % for ordinary derivatives without derived quantity (i.e. only symbol d/dx)
 
 \newcommand{\ve}[1]{{\bf #1}}% For marking vector symbols.
 \newcommand{\uv}[1]{{\bf #1}}% For marking unit vector symbols.
+
+\newcommand{\be}[1]{\begin{equation} \label{#1}}
+\newcommand{\ee}{\end{equation}}
+\newcommand{\bea}[1]{\begin{eqnarray} \label{#1}}
+\newcommand{\eea}{\end{eqnarray}}
+\newcommand{\bean}{\begin{eqnarray*}}
+\newcommand{\eean}{\end{eqnarray*}}
+
+% Bold symbols
+\newcommand{\br}{{\bf r}}
+\newcommand{\bR}{{\bf R}}
+\newcommand{\bA}{{\bf A}}
+\newcommand{\bB}{{\bf B}}
+\newcommand{\bE}{{\bf E}}
+\newcommand{\bm}{{\bf m}}
+\newcommand{\bn}{{\bf n}}
+\newcommand{\bN}{{\bf N}}
+\newcommand{\bp}{{\bf p}}
+\newcommand{\bP}{{\bf P}}
+\newcommand{\bF}{{\bf F}}
+\newcommand{\by}{{\bf y}}
+\newcommand{\bz}{{\bf z}}
+\newcommand{\bZ}{{\bf Z}}
+\newcommand{\bV}{{\bf V}}
+\newcommand{\bv}{{\bf v}}
+\newcommand{\bu}{{\bf u}}
+\newcommand{\bx}{{\bf x}}
+\newcommand{\bX}{{\bf X}}
+\newcommand{\bW}{{\bf W}}
+\newcommand{\bJ}{{\bf J}}
+\newcommand{\bj}{{\bf j}}
+\newcommand{\bk}{{\bf k}}
+\newcommand{\bTheta}{{\bf \Theta}}
+\newcommand{\btheta}{{\boldsymbol\theta}}
+\newcommand{\bOmega}{{\bf \Omega}}
+\newcommand{\bomega}{{\boldsymbol\omega}}
+\newcommand{\brho}{{\boldsymbol\rho}}
+
+% 'Normal' symbols for math environments
+\newcommand{\rd}{{\rm d}}
+\newcommand{\rJ}{{\rm J}}
+
+% Parallel quantities
+\newcommand{\vpar}{v_\parallel}
+\newcommand{\vparkb}{v_{\parallel k b}}
+\newcommand{\vparkm}{v_{\parallel k m}}
+\newcommand{\Jpar}{J_\parallel}
+\newcommand{\ppar}{p_\parallel}
+\newcommand{\Bpstar}{B_\parallel^*}
+
+% Specific sums/integrals
+\newcommand{\intpi}{\int\limits_{0}^{2\pi}}
+\newcommand{\summ}{\sum \limits_{m=-\infty}^\infty}
