Comment bm, as it is already defined by package bm
The command \bm is already defined by package bm, thus comment it.

--- a/doc/shared/Commands.sty
+++ b/doc/shared/Commands.sty
@@ -45,7 +45,7 @@
 \newcommand{\bA}{{\bf A}}
 \newcommand{\bB}{{\bf B}}
 \newcommand{\bE}{{\bf E}}
-\newcommand{\bm}{{\bf m}}
+%~ \newcommand{\bm}{{\bf m}} % command \bm already defined by package bm
 \newcommand{\bn}{{\bf n}}
 \newcommand{\bN}{{\bf N}}
 \newcommand{\bp}{{\bf p}}
