--- a/doc/ExtraDocuments/vmec.tex
+++ b/doc/ExtraDocuments/vmec.tex
@@ -180,4 +180,8 @@ coil group.
 You can try to decrease the number of radial points for the first
 stages, this seems to have helped in a DEMO case.
 
+\paragraph Minor and major radius are not set in the output file.
+
+?
+
 \end{document}
