Included requested changes pull request review #54

--- a/doc/ExtraDocuments/coding_style.tex
+++ b/doc/ExtraDocuments/coding_style.tex
@@ -79,7 +79,7 @@ Language (for names, documentation etc.) is british english.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{units}
 \neotwo uses cgs. Input might be expected in SI units (due
-to using external format, e.g. boozer files for magnetic field).
+to using external format, e.g. Boozer files for magnetic field).
 
 RB: I support change to SI units. As input/output and internal for new
 codes.
