--- a/doc/ExtraDocuments/vmec.tex
+++ b/doc/ExtraDocuments/vmec.tex
@@ -145,8 +145,8 @@ Fourier coefficients for the plasma boundary. Note that this is used as
 initial value in the free boundary case.
 
 
-\section{Convert files from vmec to boozer}
-Conversion of files from vmec to boozer format is done in two steps.
+\section{Convert files from vmec to Boozer}
+Conversion of files from vmec to Boozer format is done in two steps.
 First step is the actual conversion, second is extraction of toroidal
 modes into seperate files.
 
