--- a/doc/UserDoc/ODE_Integration.tex
+++ b/doc/UserDoc/ODE_Integration.tex
@@ -2,9 +2,9 @@
 
 \subsection{Event Detection}
 The \texttt{odeint\_allroutines} interface supports optional root detection.
-Provide an \texttt{ode\_event\_t} instance with an event function
-$g(x, y)$ and the number of events. Events trigger on sign changes of
-$g$ over an accepted step. Direction filtering is controlled with
-\texttt{direction} values of $-1$ falling, $0$ both, or $+1$ rising. If
-\texttt{terminal(i)} is set, the integrator returns at the root and the
-solution is provided at the event location.
+Provide an array of \texttt{ode\_event\_t} instances with event functions
+$g(x, y)$. Events trigger on sign changes of $g$ over an accepted step.
+Direction filtering is controlled with \texttt{direction} values of $-1$
+falling, $0$ both, or $+1$ rising. If \texttt{terminal} is set on an
+event, the integrator returns at the root and the solution is provided at
+the event location.
