Add event detection to odeint_allroutines (#198)
## Summary
- add terminal event detection to `odeint_allroutines` via array of
`ode_event_t`
- event callbacks are scalar functions with optional context
- record `triggered` and `x_event` for the first event reached

## Testing
- ctest -R test_odeint_events --output-on-failure

## Issues
- Fixes #197

---------

Co-authored-by: Andreas Zach <andreas.zach@student.tugraz.at>

--- a/doc/UserDoc/ODE_Integration.tex
+++ b/doc/UserDoc/ODE_Integration.tex
@@ -1,1 +1,10 @@
 \section{ODE Integration}
+
+\subsection{Event Detection}
+The \texttt{odeint\_allroutines} interface supports optional root detection.
+Provide an array of \texttt{ode\_event\_t} instances with event functions
+$g(x, y)$. Events trigger on sign changes of $g$ over an accepted step.
+Direction filtering is controlled with \texttt{direction} values of $-1$
+falling, $0$ both, or $+1$ rising. Events are terminal and return at the
+root; the solution is provided at the event location. Results are
+returned in \texttt{triggered} and \texttt{x\_event}.
